--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -27,6 +27,10 @@
                     android:icon="@drawable/ic_star_yellow_24dp"
                     android:title="@string/discounts" />
 
+            <item android:id="@+id/nav_discounts_map"
+                android:icon="@drawable/map_icon"
+                android:title="@string/discount_map"/>
+
             <item android:id="@+id/nav_settings"
                 android:icon="@drawable/settings"
                 android:title="@string/settings"/>
