--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -72,7 +72,7 @@
         android:id="@+id/frameLayout_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:background="@color/fui_transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ar_fragment">
 
@@ -95,8 +95,9 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:elevation="5dp"
-            android:scaleType="matrix"
-            android:background="@drawable/arrow"/>
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/arrow"/>
     </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
