--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,22 +2,29 @@
 <menu xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
       tools:ignore="MissingDefaultResource">
 
-    <!--group>
-        <item android:id="@+id/nav_discounts"
-                android:icon="@drawable/ic_star_yellow_24dp"
-                android:title="@string/discounts" />
+    <group android:checkableBehavior="single">
+        <item android:id="@+id/nav_home"
+            android:icon="@drawable/squirrelly_icon"
+            android:title="@string/home" />
 
-        <item android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_more_vert_white_24dp"
-                android:title="@string/logout_menu"/>
+        <item android:id="@+id/nav_discounts"
+            android:icon="@drawable/ic_star_yellow_24dp"
+            android:title="@string/discounts" />
+
+        <item android:id="@+id/nav_discounts_map"
+            android:icon="@drawable/map_icon"
+            android:title="@string/discount_map"/>
+
+        <item android:id="@+id/nav_settings"
+            android:icon="@drawable/settings"
+            android:title="@string/settings"/>
     </group>
 
-    <group android:id="@+id/group_menu">
-        <item android:id="@+id/nav_item_four"
-                android:title="Item 4" />
-    </group-->
+    <item android:id="@+id/nav_logout"
+        android:icon="@drawable/ic_exit_to_app_black_24dp"
+        android:title="@string/logout_menu"/>
 
-    <item android:title="@string/menu">
+    <!--item android:title="@string/menu" >
         <menu>
             <item android:id="@+id/nav_home"
                 android:icon="@drawable/squirrelly_icon"
@@ -39,6 +46,6 @@
                     android:icon="@drawable/ic_exit_to_app_black_24dp"
                     android:title="@string/logout_menu"/>
         </menu>
-    </item>
+    </item-->
 
 </menu>
