--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
       tools:ignore="MissingDefaultResource">
 
-    <group android:checkableBehavior="single">
+    <!--group android:checkableBehavior="single">
         <item android:id="@+id/nav_home"
             android:icon="@drawable/squirrelly_icon"
             android:title="@string/home" />
@@ -18,34 +18,32 @@
         <item android:id="@+id/nav_settings"
             android:icon="@drawable/settings"
             android:title="@string/settings"/>
-    </group>
+    </group-->
+
+    <item android:title="@string/menu" >
+        <menu>
+            <group android:checkableBehavior="single">
+                <item android:id="@+id/nav_home"
+                    android:icon="@drawable/squirrelly_icon"
+                    android:title="@string/home" />
+
+                <item android:id="@+id/nav_discounts"
+                    android:icon="@drawable/ic_star_yellow_24dp"
+                    android:title="@string/discounts" />
+
+                <item android:id="@+id/nav_discounts_map"
+                    android:icon="@drawable/map_icon"
+                    android:title="@string/discount_map"/>
+
+                <item android:id="@+id/nav_settings"
+                    android:icon="@drawable/settings"
+                    android:title="@string/settings"/>
+            </group>
+        </menu>
+    </item>
 
     <item android:id="@+id/nav_logout"
         android:icon="@drawable/ic_exit_to_app_black_24dp"
         android:title="@string/logout_menu"/>
-
-    <!--item android:title="@string/menu" >
-        <menu>
-            <item android:id="@+id/nav_home"
-                android:icon="@drawable/squirrelly_icon"
-                android:title="@string/home" />
-
-            <item android:id="@+id/nav_discounts"
-                    android:icon="@drawable/ic_star_yellow_24dp"
-                    android:title="@string/discounts" />
-
-            <item android:id="@+id/nav_discounts_map"
-                android:icon="@drawable/map_icon"
-                android:title="@string/discount_map"/>
-
-            <item android:id="@+id/nav_settings"
-                android:icon="@drawable/settings"
-                android:title="@string/settings"/>
-
-            <item android:id="@+id/nav_logout"
-                    android:icon="@drawable/ic_exit_to_app_black_24dp"
-                    android:title="@string/logout_menu"/>
-        </menu>
-    </item-->
 
 </menu>
