--- a/app/src/main/res/layout/discount_recycler_view_item.xml
+++ b/app/src/main/res/layout/discount_recycler_view_item.xml
@@ -23,6 +23,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="0dp"
             android:padding="8dp"
+            android:background="@drawable/background_card_view"
             android:layout_gravity="center"
             android:orientation="vertical">
 
