--- a/app/src/main/res/layout/fragment_view_discount.xml
+++ b/app/src/main/res/layout/fragment_view_discount.xml
@@ -28,6 +28,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="0dp"
                 android:padding="8dp"
+                android:background="@drawable/background_card_view"
                 android:layout_gravity="center"
                 android:orientation="vertical">
 
@@ -98,19 +99,44 @@
         </LinearLayout>
 
 
-
-
-        <com.example.timil.climateapplication.SwipeButton
-            android:id="@+id/btnUseDiscountSwipe"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginBottom="8dp"
-            android:layout_height="72dp" />
+            android:layout_height="wrap_content">
+
+            <FrameLayout
+                android:layout_width="112dp"
+                android:layout_height="102dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@drawable/background_card_view">
+
+            </FrameLayout>
+
+            <com.example.timil.climateapplication.SwipeButton
+                android:id="@+id/btnUseDiscountSwipe"
+                android:layout_width="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@color/fui_transparent"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="8dp"
+                android:layout_height="72dp" />
+
+        </android.support.constraint.ConstraintLayout>
+
+
 
 
     </LinearLayout>
+
+
+
+
 
 
 
