--- a/app/src/main/res/layout/discount_recycler_view_item.xml
+++ b/app/src/main/res/layout/discount_recycler_view_item.xml
@@ -4,9 +4,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:elevation="8dp"
-        android:background="@color/cardview_light_background"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:clickable="true">
+        android:background="@drawable/background_card_view_shape"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
@@ -15,8 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/divider">
+            app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -96,13 +94,5 @@
 
     </LinearLayout>
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/linear1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
