--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008200</color>
+    <color name="colorPrimaryAlpha">#BB008200</color>
     <color name="colorPrimaryDark">#222222</color>
     <color name="greenButtonColor">#00b200</color>
     <color name="colorAccent">#00b200</color>
